# MeshGL

./: CMakeLists.txt  Makefile  README.md
src/: glad.c  handle_input.cpp  handle_input.h  main.cpp
src/gfx/: abo.cpp  abo.h  camera.cpp  camera.h  gfx.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vao.cpp  vao.h  window.cpp  window.h
src/mesh/: mesh.cpp  mesh.h  perlin.cpp  perlin.h  perlin_mesh.cpp  perlin_mesh.h  perlin_plane.cpp  perlin_plane.h
